frontend/scss/molecules/_m-article-header.scss
/* ... */
.m-article-header--feature .m-article-header__img + .m-article-header__img {
  position: absolute;
  top: 0;
}

@supports (backdrop-filter: blur(5px)) or (-webkit-backdrop-filter: blur(5px)) {
  .m-article-header--feature .m-article-header__img[data-blur-img-dupe] {
    display: none;
  }
}
@supports not (clip-path: inset(0 0 0 0)) {
  .m-article-header--feature .m-article-header__img[data-blur-img-dupe] {
    display: none;
  }
}
@supports (not (backdrop-filter: blur(5px))) and (not (-webkit-backdrop-filter: blur(5px))) and (clip-path: inset(0 0 0 0)) and (filter: blur(5px)) {
  .m-article-header--feature .m-article-header__img {
    overflow: hidden;
  }

  .m-article-header--feature .m-article-header__img img,
  .m-article-header--feature .m-article-header__img video {
    left: -5px;
    right: -5px;
    bottom: -5px;
    width: calc(100% + 10px);
    height: calc(100% + 5px);
  }

  .m-article-header--feature .m-article-header__img[data-blur-img-dupe] img,
  .m-article-header--feature .m-article-header__img[data-blur-img-dupe] video {
    filter: blur(5px);
  }
}

.m-article-header--feature .m-article-header__img::before {
  content: '';
  position: absolute;
  z-index: 1;
  left: 0;
  right: 0;
  top: 0;
  height: 220px;
  background-image: linear-gradient(to bottom, rgba(0,0,0,.5) 0%, rgba(0,0,0,.05) 80%, rgba(0,0,0,0) 100%);

  @include breakpoint('small+') {
    height: 300px;
  }
}

.m-article-header--feature .m-article-header__img img,
.m-article-header--feature .m-article-header__img video {
  @include objectFitFix;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: bottom center;
}

.m-article-header--feature .m-article-header__text {
  display: flex;
  position: absolute;
  z-index: 1;
  left: 0;
  right: 0;
  bottom: 0;
  flex-flow: column nowrap;
  justify-content: space-between;
  min-height: 152px;
  padding-bottom: 24px;

  @include breakpoint('small+') {
    min-height: 164px;
  }

  @include breakpoint('medium+') {
    min-height: 180px;
    padding-bottom: 28px;
  }

  @include breakpoint('large+') {
    padding-right: colspan(15, large);
    padding-left: colspan(15, large);
  }

  @include breakpoint('xlarge') {
    padding-right: colspan(15, xlarge);
    padding-left: colspan(15, xlarge);
  }
}

.m-article-header--feature .m-article-header__text::before {
  @include opaqueBg(rgba(0,0,0,.4), rgba(0,0,0,.25));
  content: '';
  position: absolute;
  z-index: -1;
  left: 50%;
  top: 0;
  bottom: 0;
  width: 100vw;
  margin-left: -50vw;
}

  .m-article-header--feature.m-article-header--editorial .m-article-header__text::before {
    @include opaqueBg(rgba($color__bg--editorial, .85), rgba($color__bg--editorial, .85));
  }

.m-article-header--feature .m-article-header__text::after {
  content: '';
  position: absolute;
  z-index: -1;
  left: 50%;
  bottom: 100%;
  height: 124px;
  width: 100vw;
  margin-left: -50vw;
  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,.03) 20%, rgba(0,0,0,.3) 100%);

  @include breakpoint('large+') {
    display: none;
  }
}

.m-article-header--feature .m-article-header__text > * {
  flex: 0 0 auto;
  order: 1;
}

.m-article-header--feature .title {
  @include tucked-margin-top($f-headline-editorial, ('xsmall': 44, 'medium+': 48));
  color: $color__text--title-contrast;
}
  .m-article-header--feature.m-article-header--editorial .title {
    color: $color__text--title;
  }

.m-article-header--feature .date {
  color: $color__text--title-contrast;
}
  .m-article-header--feature.m-article-header--editorial .date {
    display: none;
  }

.m-article-header--feature .type {
  position: absolute;
  left: 0;
  top: auto;
  bottom: calc(100% + 20px);
  margin-top: 0;
  color: $color__text--title-contrast;
  //text-shadow: 0 0 25px rgba(0, 0, 0, 1);

  @include breakpoint('small+') {
    bottom: calc(100% + 24px);
  }

  @include breakpoint('large+') {
    top: 20px;
    bottom: auto;
    //text-shadow: none;
  }
}
  .m-article-header--feature.m-article-header--editorial .type {
    color: $color__text--secondary;
  }


.m-article-header--feature .m-article-header__info-trigger,
.m-article-header--feature .m-article-header__info {
  bottom: 100%;
  margin-bottom: 28px;
}





.m-article-header--hero {
  min-height: 95vh;
  padding-top: 0;

  @include breakpoint('large+') {
    padding-top: 0;
    padding-right: 0;
    padding-left: 0;
  }
}

.m-article-header--hero .m-article-header__img {
  position: absolute;
  z-index: 1;
  left: 50%;
  top: 0;
  bottom: 0;
  width: 100vw;
  height: 100%;
  margin-left: -50vw;
}

.m-article-header--hero .m-article-header__img::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  //height: 220px;
  //background-image: linear-gradient(to bottom, rgba(0,0,0,.5) 0%, rgba(0,0,0,.05) 80%, rgba(0,0,0,0) 100%);
  bottom: 0;
  background-image: linear-gradient(to bottom, rgba(0,0,0,.5) 0%, rgba(0,0,0,.35) 176px, rgba(0,0,0,.2) 220px, rgba(0,0,0,.2) 100%);

  @include breakpoint('small+') {
    //height: 300px;
    background-image: linear-gradient(to bottom, rgba(0,0,0,.5) 0%, rgba(0,0,0,.35) 240px, rgba(0,0,0,.2) 300px, rgba(0,0,0,.2) 100%);
  }
}

.m-article-header--hero .m-article-header__img img,
.m-article-header--hero .m-article-header__img video {
  @include objectFitFix;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.m-article-header--hero .m-article-header__text {
  display: flex;
  position: relative;
  flex: 1;
  z-index: 2;
  flex-flow: column nowrap;
  justify-content: center;
}

.m-article-header--hero .m-article-header__text .title {
  text-align: center;
  color: $color__text--title-contrast;
}

.m-article-header--hero .m-article-header__text .f-tag-2 {
  @include tucked-align-top($f-tag-2);
}
/* ... */

